fix video on mobile issue

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -7,21 +7,20 @@
   position: relative;
   width: 100%;
   z-index: 2;
-
-  @include tablet {
-    background: url('../../poster.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 }
 
 video {
   overflow: hidden;
   position: relative;
   z-index: -1;
+}
 
-  @include tablet {
+@media screen and (max-width: $tablet) {
+  video {
+    background: url('../../poster.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: none;
   }
 }
@@ -60,5 +59,5 @@ video {
   right: 0;
   overflow: hidden;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
